@@ -1,3 +1,4 @@
+- support for including files and snippets in xml files		TODO: document, use
 - all file selection line edits gain filename-completion
 - add a basic file selector window
 - fixed: starting the scatterplot plugin in wizard mode would crash rkward
